# MockAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  routing.py
app/api/: __init__.py
app/api/admin/: __init__.py  endpoints.py  reports.py  schemas.py
app/core/: __init__.py  settings.py
app/routers/: endpoints.py  web.py
app/services/: __init__.py  endpoint_registry.py
app/storage/: __init__.py  database.py
app/storage/models/: __init__.py  endpoint.py  schema.py
app/storage/repositories/: endpoint.py  schema.py
app/ui/templates/: create_endpoint_form.html  home.html
app/web/: __init__.py  router.py
client_app/: README.md  __init__.py  api_client.py  config.py  main.py
client_app/static/: styles.css
client_app/templates/: base.html
client_app/templates/partials/: api_error.html
client_app/templates/tickets/: detail.html  form.html  index.html
