[project]
name = "mockapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic==2.7.1",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]
