# Declara metadatos y dependencias principales del proyecto Python.
[project]
name = "mockapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.38.0",
]
